--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: MkDocs Tercen Template
 docs_dir: docs/
 site_url: https://tercen.com
-repo_url: https://github.com/tercen/mkdocs_template
-repo_name: tercen/mkdocs_template
+repo_url: https://github.com/tercen/data_clinic_guide
+repo_name: tercen/data_clinic_guide
 edit_uri: edit/main/docs/
 site_author: "Tercen Authors"
 site_description: "Documentation template for modification."
@@ -44,7 +44,7 @@ extra_css:
 plugins:
   - search
   - git-committers:
-      repository: tercen/mkdocs_template
+      repository: tercen/data_clinic_guide
       branch: main
   - git-revision-date-localized:
       enable_creation_date: true
