--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ repo_url: https://github.com/tercen/data_clinic_guide
 repo_name: tercen/data_clinic_guide
 edit_uri: edit/main/docs/
 site_author: "Tercen Authors"
-site_description: "Documentation template for modification."
+site_description: "Data clinic notes."
 use_directory_urls: true
 
 copyright: Copyright &copy; 2024 Tercen
