--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: MkDocs Tercen Template
+site_name: Data Clinic
 docs_dir: docs/
 site_url: https://tercen.com
 repo_url: https://github.com/tercen/data_clinic_guide
