--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ theme:
     - navigation.path
     - navigation.sections
     #    - navigation.expand
-    - navigation.tabs
+    #    - navigation.tabs
     #    - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
@@ -104,7 +104,7 @@ extra:
   version:
     provider: mike
 nav:
-  - Table Of Content:
+  -  :
       - Introduction: index.md
       - Data Cleaning: 01_data_cleaning.md
       - Data Uploading: 02_data_uploading.md
